c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/libraries/addition_client.c
int add(int x, int y);

int main(void) {
    return add(1, 2);
}