c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/nested_function_definition.c
int main(void) {
    /* Nested function definitions are not permitted */
    int foo(void) {
        return 1;
    }
    return foo();
}